<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >
    
    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/tvFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/tvFirstname" />

    <EditText
        android:id="@+id/editFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvFirstname"
        android:ems="10"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFirstname"
        android:layout_below="@+id/tvFirstname"
        android:layout_marginTop="30dp"
        android:text="@string/tvLastname" />

    <EditText
        android:id="@+id/editLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvLastname"
        android:ems="10"
        android:inputType="textCapWords" >
    </EditText>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvLastname"
        android:layout_below="@+id/tvLastname"
        android:layout_marginTop="30dp"
        android:text="@string/tvUsername" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvUsername"
        android:ems="10"
        android:inputType="none" >
    </EditText>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUsername"
        android:layout_below="@+id/tvUsername"
        android:layout_marginTop="30dp"
        android:text="@string/tvPassword" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvPassword"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPassword"
        android:layout_below="@+id/tvPassword"
        android:layout_marginTop="30dp"
        android:text="@string/tvEmail" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvEmail"
        android:ems="10"
        android:inputType="textEmailAddress" >
    </EditText>

    <TextView
        android:id="@+id/tvYearbirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEmail"
        android:layout_below="@+id/tvEmail"
        android:layout_marginTop="30dp"
        android:text="@string/tvYearbirth" />

    <Spinner
        android:id="@+id/spinnerYearbirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvYearbirth"
        android:layout_marginLeft="60dp"
        android:layout_toRightOf="@+id/tvYearbirth" />

    <TextView
        android:id="@+id/tvSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvYearbirth"
        android:layout_below="@+id/tvYearbirth"
        android:layout_marginTop="60dp"
        android:text="@string/tvSex" />

    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvSex"
        android:layout_toRightOf="@+id/tvSex" >
    </RadioGroup>

    <RadioButton
        android:id="@+id/radioFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvSex"
        android:layout_toRightOf="@+id/tvYearbirth"
        android:checked="true"
        android:text="@string/tvFemale" />

    <RadioButton
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioFemale"
        android:layout_below="@+id/radioFemale"
        android:layout_marginTop="15dp"
        android:text="@string/tvMale" />
    
    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSex"
        android:layout_below="@+id/tvSex"
        android:layout_marginTop="60dp"
        android:text="@string/tvHeight" />
    
    <EditText
        android:id="@+id/editHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvHeight"
        android:ems="10"
        android:inputType="numberDecimal" >
    </EditText>

    <Button
        android:id="@+id/buttonSaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvHeight"
        android:layout_below="@+id/tvHeight"
        android:layout_marginTop="30dp"
        android:text="@string/buttonSaveAccount" />
    
    </RelativeLayout> 
    
</ScrollView>

