<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp" >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >
            
                        
            <TextView
            	android:id="@+id/prfUsername"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="myUser"
            	android:textAppearance="?android:attr/textAppearanceLarge" />

            <RatingBar
                android:id="@+id/ratingFitness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="50dp"
                android:layout_alignTop="@+id/prfUsername"
                 />

            <Spinner
                android:id="@+id/spinStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignLeft="@+id/prfUsername"
                android:layout_marginTop="30dp"
                />
            
        </RelativeLayout>
        
            
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >
            
            <TextView
            	android:id="@+id/tvCurrentWeight"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/tvCurrentWeight"
            	 />
            
            <TextView
            	android:id="@+id/prfCurrentWeight"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_alignLeft="@+id/tvCurrentWeight"
        		android:layout_below="@+id/tvCurrentWeight"
            	android:text="weight"
            	 />
            
            <TextView
            	android:id="@+id/tvCurrentBMI"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_alignLeft="@+id/prfCurrentWeight"
        		android:layout_below="@+id/prfCurrentWeight"
        		android:layout_marginTop="20dp"
            	android:text="@string/tvCurrentBMI"
            	 />
            
            <TextView
            	android:id="@+id/prfCurrentBMI"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_alignLeft="@+id/tvCurrentBMI"
        		android:layout_below="@+id/tvCurrentBMI"
            	android:text="bmi"
            	 />
            
            <Button 
                android:id="@+id/buttonEntry"
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_alignTop="@+id/tvCurrentWeight"
        		android:layout_alignParentRight="true"
        		android:layout_marginLeft="50dp"
        		android:text="@string/buttonNewEntry"
                />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
